best_try_and_best_chance

--- a/.src/190/index.org
+++ b/.src/190/index.org
@@ -7,6 +7,9 @@
 
 * 笔记
 ** 2024-04-03 10:34:53
+:PROPERTIES:
+:ID:       20240403T105336.671977
+:END:
 
 小测验:
 - 制作一个简单的时钟程序，将时间显示出来
@@ -405,6 +408,64 @@ Winform 项目，VS 界面:
 * 任务结果
 
 #+NAME: rs
+| G | 姓名   | [[id:20240403T105336.671977][2024-04-03]] |
+|---+-------+------------|
+| 2 | 甘成杰 |            |
+| 3 | 官名福 |            |
+| 6 | 肖毅良 |            |
+| 2 | 刘鹏   |            |
+| 2 | 刘天宇 |            |
+| 2 | 林俊贤 |            |
+| 6 | 吴淑豪 |            |
+| 6 | 江金涛 |            |
+| 6 | 吴嘉城 |            |
+| 6 | 陈翕   |            |
+| 6 | 黄军帮 |            |
+| 6 | 王俊杰 |            |
+| 4 | 邓义柏 |            |
+| 6 | 曾翔   |            |
+| 5 | 黄锡东 |            |
+| 5 | 刘金麓 |            |
+| 4 | 盘泽强 |            |
+| 3 | 陈宇川 |            |
+| 5 | 曾宏燊 |            |
+| 5 | 王艺楠 |            |
+| 5 | 李毅   |            |
+| 5 | 李德致 |            |
+| 4 | 李进斌 |            |
+| 4 | 杨耀嘉 |            |
+| 3 | 梁炽勇 |            |
+| 4 | 符文财 |            |
+| 2 | 杜喆   |            |
+| 3 | 张明达 |            |
+| 5 | 周远龙 |            |
+| 4 | 何锦晖 |            |
+| 1 | 杨富   |            |
+| 1 | 江坤涛 |            |
+| 1 | 程春平 |            |
+| 1 | 夏志豪 |            |
+| 1 | 韦代帅 |            |
+| 2 | 黄颜徽 |            |
+| 2 | 林显诚 |            |
+| 3 | 谢鹤鸣 |            |
+| 3 | 邓炜祺 |            |
+| 3 | 郭小龙 |            |
+| 3 | 刘仁杰 |            |
+| 4 | 罗秀洋 |            |
+| 4 | 左亮   |            |
+| 4 | 车斌涛 |            |
+| 5 | 王上标 |            |
+| 5 | 周枫   |            |
+| 2 | 肖峰   |            |
+| 3 | 魏坤   |            |
+| 6 | 黄萧   |            |
+
+
+
+
+
+{{{details(history scores)}}}
+#+NAME: rs
 | G | 姓名   | [[id:20240311T094631.484054][2023-09-07]] | [[id:20240311T094909.989622][2023-10-30]] | [[id:20240311T094931.791352][2023-12-28]] |
 |---+-------+------------+------------+------------|
 | 2 | 甘成杰 |          2 |          1 |          1 |
@@ -456,3 +517,4 @@ Winform 项目，VS 界面:
 | 2 | 肖峰   |          - |            |            |
 | 3 | 魏坤   |          - |            |            |
 | 6 | 黄萧   |            |            |            |
+{{{details(/)}}}
