--- a/.src/190/index.org
+++ b/.src/190/index.org
@@ -416,9 +416,9 @@ Winform 项目，VS 界面:
 | 2 | 刘鹏   |            |
 | 2 | 刘天宇 |            |
 | 2 | 林俊贤 |            |
-| 6 | 吴淑豪 |            |
-| 6 | 江金涛 |            |
-| 6 | 吴嘉城 |            |
+| 6 | 吴淑豪 |          1 |
+| 6 | 江金涛 |          3 |
+| 6 | 吴嘉城 |          2 |
 | 6 | 陈翕   |            |
 | 6 | 黄军帮 |            |
 | 6 | 王俊杰 |            |
