best_try_and_best_chance

--- a/.src/190/index.org
+++ b/.src/190/index.org
@@ -446,15 +446,15 @@ Winform 项目，VS 界面:
 #+NAME: rs
 | G | 姓名   | [[id:20240403T105336.671977][2024-04-03]] |
 |---+-------+------------|
+| 6 | 吴淑豪 |          1 |
+| 6 | 吴嘉城 |          2 |
+| 6 | 江金涛 |          3 |
+| 2 | 林俊贤 |          4 |
 | 2 | 甘成杰 |            |
 | 3 | 官名福 |            |
 | 6 | 肖毅良 |            |
 | 2 | 刘鹏   |            |
 | 2 | 刘天宇 |            |
-| 2 | 林俊贤 |            |
-| 6 | 吴淑豪 |          1 |
-| 6 | 江金涛 |          3 |
-| 6 | 吴嘉城 |          2 |
 | 6 | 陈翕   |            |
 | 6 | 黄军帮 |            |
 | 6 | 王俊杰 |            |
