best_try_and_best_chance

--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -371,6 +371,8 @@ C/S架构编程，做完第一章所有的上机题:
 | 2 | 刘虹佑 |         20 |            |
 | 3 | 段文锋 |         21 |            |
 | 2 | 岑法政 |         22 |            |
+| 3 | 薛进超 |         23 |            |
+| 1 | 谭鑫   |         24 |            |
 | 5 | 梁泽文 |            |            |
 | 1 | 吴幸林 |            |            |
 | 1 | 苏大明 |            |            |
@@ -378,13 +380,11 @@ C/S架构编程，做完第一章所有的上机题:
 | 4 | 叶宇   |            |            |
 | 3 | 张甘霖 |            |            |
 | 1 | 余海中 |            |            |
-| 1 | 谭鑫   |            |            |
 | 2 | 麦天河 |            |            |
 | 4 | 王海波 |            |            |
 | 3 | 饶展源 |            |            |
 | 4 | 谢晓中 |            |            |
 | 1 | 沈艺宏 |            |            |
-| 3 | 薛进超 |            |            |
 | 1 | 刘翔   |            |            |
 | 6 | 周永久 |            |            |
 | 6 | 张桂毓 |            |            |
