best_try_and_best_chance

--- a/.src/190/index.org
+++ b/.src/190/index.org
@@ -7,6 +7,9 @@
 
 * 笔记
 ** 2024-04-10 10:34:21
+:PROPERTIES:
+:ID:       20240410T105938.783101
+:END:
 
 实现一个温度转换程序。要求能够将华氏温度转换为摄氏温度。
 
@@ -453,57 +456,57 @@ Winform 项目，VS 界面:
 * 任务结果
 
 #+NAME: rs
-| G | 姓名   | [[id:20240403T105336.671977][2024-04-03]] |
-|---+-------+------------|
-| 6 | 吴淑豪 |          1 |
-| 6 | 吴嘉城 |          2 |
-| 6 | 江金涛 |          3 |
-| 2 | 林俊贤 |          4 |
-| 2 | 甘成杰 |            |
-| 3 | 官名福 |            |
-| 6 | 肖毅良 |            |
-| 2 | 刘鹏   |            |
-| 2 | 刘天宇 |            |
-| 6 | 陈翕   |            |
-| 6 | 黄军帮 |            |
-| 6 | 王俊杰 |            |
-| 4 | 邓义柏 |            |
-| 6 | 曾翔   |            |
-| 5 | 黄锡东 |            |
-| 5 | 刘金麓 |            |
-| 4 | 盘泽强 |            |
-| 3 | 陈宇川 |            |
-| 5 | 曾宏燊 |            |
-| 5 | 王艺楠 |            |
-| 5 | 李毅   |            |
-| 5 | 李德致 |            |
-| 4 | 李进斌 |            |
-| 4 | 杨耀嘉 |            |
-| 3 | 梁炽勇 |            |
-| 4 | 符文财 |            |
-| 2 | 杜喆   |            |
-| 3 | 张明达 |            |
-| 5 | 周远龙 |            |
-| 4 | 何锦晖 |            |
-| 1 | 杨富   |            |
-| 1 | 江坤涛 |            |
-| 1 | 程春平 |            |
-| 1 | 夏志豪 |            |
-| 1 | 韦代帅 |            |
-| 2 | 黄颜徽 |            |
-| 2 | 林显诚 |            |
-| 3 | 谢鹤鸣 |            |
-| 3 | 邓炜祺 |            |
-| 3 | 郭小龙 |            |
-| 3 | 刘仁杰 |            |
-| 4 | 罗秀洋 |            |
-| 4 | 左亮   |            |
-| 4 | 车斌涛 |            |
-| 5 | 王上标 |            |
-| 5 | 周枫   |            |
-| 2 | 肖峰   |            |
-| 3 | 魏坤   |            |
-| 6 | 黄萧   |            |
+| G | 姓名   | [[id:20240403T105336.671977][2024-04-03]] | [[id:20240410T105938.783101][2024-04-10]] |
+|---+-------+------------+------------|
+| 6 | 吴淑豪 |          1 |            |
+| 6 | 吴嘉城 |          2 |            |
+| 6 | 江金涛 |          3 |            |
+| 2 | 林俊贤 |          4 |          1 |
+| 2 | 甘成杰 |            |            |
+| 3 | 官名福 |            |            |
+| 6 | 肖毅良 |            |            |
+| 2 | 刘鹏   |            |            |
+| 2 | 刘天宇 |            |            |
+| 6 | 陈翕   |            |            |
+| 6 | 黄军帮 |            |            |
+| 6 | 王俊杰 |            |            |
+| 4 | 邓义柏 |            |            |
+| 6 | 曾翔   |            |            |
+| 5 | 黄锡东 |            |            |
+| 5 | 刘金麓 |            |            |
+| 4 | 盘泽强 |            |            |
+| 3 | 陈宇川 |            |            |
+| 5 | 曾宏燊 |            |            |
+| 5 | 王艺楠 |            |            |
+| 5 | 李毅   |            |            |
+| 5 | 李德致 |            |            |
+| 4 | 李进斌 |            |            |
+| 4 | 杨耀嘉 |            |            |
+| 3 | 梁炽勇 |            |            |
+| 4 | 符文财 |            |            |
+| 2 | 杜喆   |            |            |
+| 3 | 张明达 |            |            |
+| 5 | 周远龙 |            |            |
+| 4 | 何锦晖 |            |            |
+| 1 | 杨富   |            |            |
+| 1 | 江坤涛 |            |            |
+| 1 | 程春平 |            |            |
+| 1 | 夏志豪 |            |            |
+| 1 | 韦代帅 |            |            |
+| 2 | 黄颜徽 |            |            |
+| 2 | 林显诚 |            |            |
+| 3 | 谢鹤鸣 |            |            |
+| 3 | 邓炜祺 |            |            |
+| 3 | 郭小龙 |            |            |
+| 3 | 刘仁杰 |            |            |
+| 4 | 罗秀洋 |            |            |
+| 4 | 左亮   |            |            |
+| 4 | 车斌涛 |            |            |
+| 5 | 王上标 |            |            |
+| 5 | 周枫   |            |            |
+| 2 | 肖峰   |            |            |
+| 3 | 魏坤   |            |            |
+| 6 | 黄萧   |            |            |
 
 
 
