--- a/.src/190/index.org
+++ b/.src/190/index.org
@@ -466,10 +466,10 @@ Winform 项目，VS 界面:
 | 6 | 陈翕   |            |          6 |
 | 6 | 江金涛 |          3 |          7 |
 | 4 | 邓义柏 |            |          8 |
-| 4 | 杨耀嘉 |            |          9 |
+| 4 | 杨耀嘉 |         11 |          9 |
 | 5 | 刘金麓 |            |         10 |
 | 5 | 曾宏燊 |            |         11 |
-| 3 | 梁炽勇 |            |         12 |
+| 3 | 梁炽勇 |         10 |         12 |
 | 2 | 甘成杰 |          7 |         13 |
 | 2 | 黄颜徽 |            |         14 |
 | 1 | 江坤涛 |            |         15 |
@@ -489,6 +489,7 @@ Winform 项目，VS 界面:
 | 5 | 王上标 |            |         29 |
 | 2 | 刘鹏   |          9 |         30 |
 | 5 | 李毅   |            |         31 |
+| 3 | 邓炜祺 |            |         32 |
 | 2 | 刘天宇 |          8 |            |
 | 5 | 王艺楠 |            |            |
 | 4 | 李进斌 |            |            |
@@ -498,7 +499,6 @@ Winform 项目，VS 界面:
 | 1 | 韦代帅 |            |            |
 | 2 | 林显诚 |            |            |
 | 3 | 谢鹤鸣 |            |            |
-| 3 | 邓炜祺 |            |            |
 | 3 | 郭小龙 |            |            |
 | 3 | 刘仁杰 |            |            |
 | 4 | 罗秀洋 |            |            |
