best_try_and_best_chance

--- a/.src/190/index.org
+++ b/.src/190/index.org
@@ -490,19 +490,19 @@ Winform 项目，VS 界面:
 | 2 | 刘鹏   |          9 |         30 |
 | 5 | 李毅   |            |         31 |
 | 3 | 邓炜祺 |            |         32 |
+| 3 | 谢鹤鸣 |            |         33 |
+| 4 | 左亮   |            |         34 |
+| 1 | 韦代帅 |            |         35 |
+| 1 | 程春平 |            |         36 |
 | 2 | 刘天宇 |          8 |            |
 | 5 | 王艺楠 |            |            |
 | 4 | 李进斌 |            |            |
 | 2 | 杜喆   |            |            |
-| 1 | 程春平 |            |            |
 | 1 | 夏志豪 |            |            |
-| 1 | 韦代帅 |            |            |
 | 2 | 林显诚 |            |            |
-| 3 | 谢鹤鸣 |            |            |
 | 3 | 郭小龙 |            |            |
 | 3 | 刘仁杰 |            |            |
 | 4 | 罗秀洋 |            |            |
-| 4 | 左亮   |            |            |
 | 4 | 车斌涛 |            |            |
 | 2 | 肖峰   |            |            |
 | 3 | 魏坤   |            |            |
