best_try_and_best_chance

--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -350,7 +350,7 @@ C/S架构编程，做完第一章所有的上机题:
 | G | 姓名   | [[id:20240409T102501.823430][2024-04-09]] | [[id:20240410T091613.104984][2024-04-10]] |
 |---+-------+------------+------------|
 | 4 | 李吉   |          1 |          1 |
-| 5 | 许焕圣 |          2 |            |
+| 5 | 许焕圣 |          2 |          3 |
 | 5 | 何华为 |          3 |            |
 | 5 | 韦金良 |          4 |            |
 | 5 | 肖义珥 |          5 |            |
@@ -373,13 +373,13 @@ C/S架构编程，做完第一章所有的上机题:
 | 2 | 岑法政 |         22 |            |
 | 3 | 薛进超 |         23 |            |
 | 1 | 谭鑫   |         24 |            |
-| 5 | 梁泽文 |            |            |
-| 1 | 吴幸林 |            |            |
+| 1 | 余海中 |         25 |            |
+| 5 | 梁泽文 |         26 |            |
+| 1 | 吴幸林 |         27 |            |
+| 3 | 张甘霖 |         28 |            |
 | 1 | 苏大明 |            |            |
 | 4 | 陈梓鑫 |            |            |
 | 4 | 叶宇   |            |            |
-| 3 | 张甘霖 |            |            |
-| 1 | 余海中 |            |            |
 | 2 | 麦天河 |            |            |
 | 4 | 王海波 |            |            |
 | 3 | 饶展源 |            |            |
