best_try_and_best_chance

--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -411,20 +411,20 @@ C/S架构编程，做完第一章所有的上机题:
 | 5 | 梁泽文 |         26 |            |
 | 1 | 吴幸林 |         27 |            |
 | 3 | 张甘霖 |         28 |            |
-| 1 | 苏大明 |            |            |
-| 4 | 陈梓鑫 |            |            |
-| 4 | 叶宇   |            |            |
-| 2 | 麦天河 |            |            |
-| 4 | 王海波 |            |            |
-| 3 | 饶展源 |            |            |
-| 1 | 沈艺宏 |            |            |
-| 1 | 刘翔   |            |            |
-| 6 | 周永久 |            |            |
-| 6 | 张桂毓 |            |            |
-| 6 | 刘泽泉 |            |            |
-| 1 | 李岳元 |            |            |
+| 4 | 陈梓鑫 |         29 |            |
+| 4 | 叶宇   |         30 |            |
+| 4 | 卢德涛 |         31 |            |
+| 3 | 饶展源 |         32 |            |
+| 6 | 张桂毓 |         33 |            |
+| 6 | 刘泽泉 |         34 |            |
+| 1 | 李岳元 |         35 |            |
+| 6 | 周永久 |         36 |            |
+| 2 | 麦天河 |         37 |            |
+| 1 | 刘翔   |         38 |            |
+| 1 | 沈艺宏 |         39 |            |
+| 4 | 王海波 |         40 |            |
+| 1 | 苏大明 |         41 |            |
 | 4 | 何晓东 |            |            |
-| 4 | 卢德涛 |            |            |
 
 
 {{{details(history score)}}}
