best_try_and_best_chance

--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -392,7 +392,7 @@ C/S架构编程，做完第一章所有的上机题:
 | 3 | 刘广鸿 |          7 |            |
 | 3 | 段文潇 |          8 |          2 |
 | 4 | 贝俊霖 |          9 |            |
-| 5 | 黄可彬 |         10 |            |
+| 5 | 黄可彬 |         10 |          4 |
 | 3 | 李泽俊 |         11 |            |
 | 2 | 李耀武 |         12 |            |
 | 5 | 黄飞超 |         13 |            |
@@ -424,7 +424,7 @@ C/S架构编程，做完第一章所有的上机题:
 | 1 | 沈艺宏 |         39 |            |
 | 4 | 王海波 |         40 |            |
 | 1 | 苏大明 |         41 |            |
-| 4 | 何晓东 |            |            |
+| 4 | 何晓东 |         42 |            |
 
 
 {{{details(history score)}}}
