best_try_and_best_chance

--- a/.src/190/index.org
+++ b/.src/190/index.org
@@ -466,7 +466,7 @@ Winform 项目，VS 界面:
 | G | 姓名   | [[id:20240403T105336.671977][2024-04-03]] | [[id:20240410T105938.783101][2024-04-10]] | [[id:20240415T095931.789141][2024-04-15]] |
 |---+-------+------------+------------+------------|
 | 2 | 林俊贤 |          4 |          1 |          1 |
-| 6 | 吴淑豪 |          1 |          2 |            |
+| 6 | 吴淑豪 |          1 |          2 |          2 |
 | 6 | 吴嘉城 |          2 |          3 |            |
 | 3 | 官名福 |          5 |          4 |            |
 | 1 | 杨富   |            |          5 |            |
