--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -384,15 +384,15 @@ C/S架构编程，做完第一章所有的上机题:
 | G | 姓名   | [[id:20240409T102501.823430][2024-04-09]] | [[id:20240410T091613.104984][2024-04-10]] |
 |---+-------+------------+------------|
 | 4 | 李吉   |          1 |          1 |
+| 3 | 段文潇 |          8 |          2 |
 | 5 | 许焕圣 |          2 |          3 |
-| 5 | 何华为 |          3 |            |
+| 5 | 黄可彬 |         10 |          4 |
+| 2 | 高旻昱 |          6 |          5 |
+| 5 | 何华为 |          3 |          6 |
 | 5 | 韦金良 |          4 |            |
 | 5 | 肖义珥 |          5 |            |
-| 2 | 高旻昱 |          6 |            |
 | 3 | 刘广鸿 |          7 |            |
-| 3 | 段文潇 |          8 |          2 |
 | 4 | 贝俊霖 |          9 |            |
-| 5 | 黄可彬 |         10 |          4 |
 | 3 | 李泽俊 |         11 |            |
 | 2 | 李耀武 |         12 |            |
 | 5 | 黄飞超 |         13 |            |
