best_try_and_best_chance

--- a/.src/190/index.org
+++ b/.src/190/index.org
@@ -501,16 +501,16 @@ Winform 项目，VS 界面:
 | 4 | 左亮   |            |         34 |            |
 | 1 | 韦代帅 |            |         35 |            |
 | 1 | 程春平 |            |         36 |            |
-| 2 | 刘天宇 |          8 |            |            |
+| 3 | 郭小龙 |            |         37 |            |
+| 2 | 刘天宇 |          8 |         38 |            |
+| 4 | 车斌涛 |            |         39 |            |
+| 1 | 夏志豪 |            |         40 |            |
+| 3 | 刘仁杰 |            |         41 |            |
 | 5 | 王艺楠 |            |            |            |
 | 4 | 李进斌 |            |            |            |
 | 2 | 杜喆   |            |            |            |
-| 1 | 夏志豪 |            |            |            |
 | 2 | 林显诚 |            |            |            |
-| 3 | 郭小龙 |            |            |            |
-| 3 | 刘仁杰 |            |            |            |
 | 4 | 罗秀洋 |            |            |            |
-| 4 | 车斌涛 |            |            |            |
 | 2 | 肖峰   |            |            |            |
 | 3 | 魏坤   |            |            |            |
 | 6 | 黄萧   |            |            |            |
