--- a/.src/190/index.org
+++ b/.src/190/index.org
@@ -469,19 +469,19 @@ Winform 项目，VS 界面:
 | 6 | 吴淑豪 |          1 |          2 |          2 |
 | 6 | 吴嘉城 |          2 |          3 |            |
 | 3 | 官名福 |          5 |          4 |            |
-| 1 | 杨富   |            |          5 |            |
+| 1 | 杨富   |            |          5 |          5 |
 | 6 | 陈翕   |            |          6 |            |
 | 6 | 江金涛 |          3 |          7 |            |
-| 4 | 邓义柏 |            |          8 |            |
+| 4 | 邓义柏 |            |          8 |          4 |
 | 4 | 杨耀嘉 |         11 |          9 |            |
 | 5 | 刘金麓 |            |         10 |            |
 | 5 | 曾宏燊 |            |         11 |            |
 | 3 | 梁炽勇 |         10 |         12 |            |
-| 2 | 甘成杰 |          7 |         13 |            |
+| 2 | 甘成杰 |          7 |         13 |          3 |
 | 2 | 黄颜徽 |            |         14 |            |
 | 1 | 江坤涛 |            |         15 |            |
 | 6 | 王俊杰 |            |         16 |            |
-| 6 | 曾翔   |          6 |         17 |            |
+| 6 | 曾翔   |          6 |         17 |          6 |
 | 5 | 李德致 |            |         18 |            |
 | 6 | 黄军帮 |            |         19 |            |
 | 4 | 符文财 |            |         20 |            |
@@ -506,11 +506,11 @@ Winform 项目，VS 界面:
 | 4 | 车斌涛 |            |         39 |            |
 | 1 | 夏志豪 |            |         40 |            |
 | 3 | 刘仁杰 |            |         41 |            |
+| 4 | 罗秀洋 |            |         42 |            |
 | 5 | 王艺楠 |            |            |            |
 | 4 | 李进斌 |            |            |            |
 | 2 | 杜喆   |            |            |            |
 | 2 | 林显诚 |            |            |            |
-| 4 | 罗秀洋 |            |            |            |
 | 2 | 肖峰   |            |            |            |
 | 3 | 魏坤   |            |            |            |
 | 6 | 黄萧   |            |            |            |
