best_try_and_best_chance

--- a/.src/190/index.org
+++ b/.src/190/index.org
@@ -468,7 +468,7 @@ Winform 项目，VS 界面:
 | 2 | 林俊贤 |          4 |          1 |          1 |
 | 6 | 吴淑豪 |          1 |          2 |          2 |
 | 6 | 吴嘉城 |          2 |          3 |            |
-| 3 | 官名福 |          5 |          4 |            |
+| 3 | 官名福 |          5 |          4 |          8 |
 | 1 | 杨富   |            |          5 |          5 |
 | 6 | 陈翕   |            |          6 |            |
 | 6 | 江金涛 |          3 |          7 |            |
@@ -476,7 +476,7 @@ Winform 项目，VS 界面:
 | 4 | 杨耀嘉 |         11 |          9 |            |
 | 5 | 刘金麓 |            |         10 |            |
 | 5 | 曾宏燊 |            |         11 |            |
-| 3 | 梁炽勇 |         10 |         12 |            |
+| 3 | 梁炽勇 |         10 |         12 |          7 |
 | 2 | 甘成杰 |          7 |         13 |          3 |
 | 2 | 黄颜徽 |            |         14 |            |
 | 1 | 江坤涛 |            |         15 |            |
@@ -494,7 +494,7 @@ Winform 项目，VS 界面:
 | 5 | 周远龙 |            |         27 |            |
 | 4 | 何锦晖 |            |         28 |            |
 | 5 | 王上标 |            |         29 |            |
-| 2 | 刘鹏   |          9 |         30 |            |
+| 2 | 刘鹏   |          9 |         30 |          9 |
 | 5 | 李毅   |            |         31 |            |
 | 3 | 邓炜祺 |            |         32 |            |
 | 3 | 谢鹤鸣 |            |         33 |            |
@@ -507,10 +507,10 @@ Winform 项目，VS 界面:
 | 1 | 夏志豪 |            |         40 |            |
 | 3 | 刘仁杰 |            |         41 |            |
 | 4 | 罗秀洋 |            |         42 |            |
-| 5 | 王艺楠 |            |            |            |
-| 4 | 李进斌 |            |            |            |
-| 2 | 杜喆   |            |            |            |
-| 2 | 林显诚 |            |            |            |
+| 2 | 杜喆   |            |         43 |            |
+| 5 | 王艺楠 |            |         44 |            |
+| 2 | 林显诚 |            |         45 |            |
+| 4 | 李进斌 |            |         46 |            |
 | 2 | 肖峰   |            |            |            |
 | 3 | 魏坤   |            |            |            |
 | 6 | 黄萧   |            |            |            |
