best_try_and_best_chance

--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -396,13 +396,15 @@ C/S架构编程，做完第一章所有的上机题:
 | 5 | 黄可彬 |         10 |          4 |          4 |
 | 2 | 高旻昱 |          6 |          5 |          5 |
 | 5 | 何华为 |          3 |          6 |          6 |
+| 1 | 谭鑫   |         24 |          7 |            |
+| 1 | 余海中 |         25 |          8 |            |
+| 5 | 黄飞超 |         13 |          9 |          7 |
+| 2 | 李耀武 |         12 |         10 |            |
 | 5 | 韦金良 |          4 |            |            |
 | 5 | 肖义珥 |          5 |            |            |
 | 3 | 刘广鸿 |          7 |            |            |
 | 4 | 贝俊霖 |          9 |            |            |
 | 3 | 李泽俊 |         11 |            |            |
-| 2 | 李耀武 |         12 |            |            |
-| 5 | 黄飞超 |         13 |            |            |
 | 5 | 古远东 |         14 |            |            |
 | 3 | 唐景富 |         15 |            |            |
 | 5 | 郭榕荣 |         16 |            |            |
@@ -413,8 +415,6 @@ C/S架构编程，做完第一章所有的上机题:
 | 3 | 段文锋 |         21 |            |            |
 | 2 | 岑法政 |         22 |            |            |
 | 3 | 薛进超 |         23 |            |            |
-| 1 | 谭鑫   |         24 |            |            |
-| 1 | 余海中 |         25 |            |            |
 | 5 | 梁泽文 |         26 |            |            |
 | 1 | 吴幸林 |         27 |            |            |
 | 3 | 张甘霖 |         28 |            |            |
