--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -396,41 +396,41 @@ C/S架构编程，做完第一章所有的上机题:
 | 5 | 黄可彬 |         10 |          4 |          4 |
 | 2 | 高旻昱 |          6 |          5 |          5 |
 | 5 | 何华为 |          3 |          6 |          6 |
-| 1 | 谭鑫   |         24 |          7 |            |
-| 1 | 余海中 |         25 |          8 |            |
+| 1 | 谭鑫   |         24 |          7 |         11 |
+| 1 | 余海中 |         25 |          8 |         13 |
 | 5 | 黄飞超 |         13 |          9 |          7 |
 | 2 | 李耀武 |         12 |         10 |            |
+| 5 | 肖义珥 |          5 |         11 |            |
+| 5 | 古远东 |         14 |         12 |            |
+| 2 | 刘虹佑 |         20 |         13 |            |
+| 1 | 陆宇轩 |         19 |         14 |            |
+| 6 | 张桂毓 |         33 |         15 |            |
+| 6 | 刘泽泉 |         34 |         16 |            |
+| 6 | 周永久 |         36 |         17 |            |
+| 1 | 刘翔   |         38 |         18 |            |
+| 4 | 贝俊霖 |          9 |         19 |            |
+| 4 | 卢德涛 |         31 |         20 |            |
+| 3 | 段文锋 |         21 |         21 |         10 |
+| 4 | 叶宇   |         30 |         22 |            |
+| 4 | 陈梓鑫 |         29 |         23 |            |
+| 3 | 刘广鸿 |          7 |         24 |         15 |
+| 3 | 李泽俊 |         11 |         25 |         12 |
+| 3 | 唐景富 |         15 |         26 |            |
+| 6 | 段京文 |         18 |         27 |         15 |
+| 3 | 张甘霖 |         28 |         28 |            |
+| 1 | 沈艺宏 |         39 |         29 |            |
+| 1 | 苏大明 |         41 |         30 |            |
+| 5 | 郭榕荣 |         16 |         31 |         14 |
+| 3 | 薛进超 |         23 |         32 |            |
+| 3 | 陈颖聪 |         17 |         33 |            |
+| 3 | 饶展源 |         32 |            |          9 |
 | 5 | 韦金良 |          4 |            |            |
-| 5 | 肖义珥 |          5 |            |            |
-| 3 | 刘广鸿 |          7 |            |            |
-| 4 | 贝俊霖 |          9 |            |            |
-| 3 | 李泽俊 |         11 |            |            |
-| 5 | 古远东 |         14 |            |            |
-| 3 | 唐景富 |         15 |            |            |
-| 5 | 郭榕荣 |         16 |            |            |
-| 3 | 陈颖聪 |         17 |            |            |
-| 6 | 段京文 |         18 |            |            |
-| 1 | 陆宇轩 |         19 |            |            |
-| 2 | 刘虹佑 |         20 |            |            |
-| 3 | 段文锋 |         21 |            |            |
 | 2 | 岑法政 |         22 |            |            |
-| 3 | 薛进超 |         23 |            |            |
 | 5 | 梁泽文 |         26 |            |            |
 | 1 | 吴幸林 |         27 |            |            |
-| 3 | 张甘霖 |         28 |            |            |
-| 4 | 陈梓鑫 |         29 |            |            |
-| 4 | 叶宇   |         30 |            |            |
-| 4 | 卢德涛 |         31 |            |            |
-| 3 | 饶展源 |         32 |            |            |
-| 6 | 张桂毓 |         33 |            |            |
-| 6 | 刘泽泉 |         34 |            |            |
 | 1 | 李岳元 |         35 |            |            |
-| 6 | 周永久 |         36 |            |            |
 | 2 | 麦天河 |         37 |            |            |
-| 1 | 刘翔   |         38 |            |            |
-| 1 | 沈艺宏 |         39 |            |            |
-| 4 | 王海波 |         40 |            |            |
-| 1 | 苏大明 |         41 |            |            |
+| 4 | 王海波 |         40 |            |          8 |
 | 4 | 何晓东 |         42 |            |            |
 
 
