best_try_and_best_chance

--- a/.src/192/index.org
+++ b/.src/192/index.org
@@ -70,7 +70,7 @@
       inBox.SelectAll();
   }
 
-  private void catBtn_Click(object sender, EventArgs e)
+  private void caiBtn_Click(object sender, EventArgs e)
   {
       猜一猜();
   }
